--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 	<body>
 		<val-navbar></val-navbar>
 			<main>
+				
+				<div id="contenitore">
 
+				</div>
 				
 			</main>
 		<val-footer></val-footer>
