--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-		<link href="index.css" rel="stylesheet" />
-		<script src="index.js"></script>
-		<script src="componenti/tag1.js"></script>
-		<script src="componenti/val-navbar.js"></script>
-		<script src="componenti/footer.js"></script>
+		<link href="CSS/svolgimento.css" rel="stylesheet" />
+		<script src="JS/svolgimento.js"></script>
+		<script src="JS/tag1.js"></script>
+		<script src="JS/footer.js"></script>
 	</head>
 
 	<body>
