--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<script src="JS/svolgimento.js"></script>
 		<script src="JS/tag1.js"></script>
 		<script src="JS/footer.js"></script>
+		<script src="JS/val-navbar.js"></script>
 	</head>
 
 	<body>
