--- a/correzione.html
+++ b/correzione.html
@@ -13,23 +13,12 @@
     <!--SCRIPT-->
     <script src="JS/oggettiBase.js"  defer ></script>
     <script src="JS/correzione.js"  defer ></script>
+	<script src="JS/val-navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <nav class="navigation">
-                    <a href="">Home</a>
-                </nav>
-            </div>
-        </div>
-        </nav>
+        <val-navbar></val-navbar>
     </header>
     <main>
         <div class="container-xxl m-5 p-3 rounded col-md-12 col-8 animate__zoomIn" id="usrArea"> <!--Zona dati utente che vuole veder la correzione-->
